# dsff

./: .gitignore  CHANGELOG.md  GUIDE.md  README.md  build.bat  pyproject.toml  setup.bat  spec_20260403_1900.md
.claude/: settings.local.json
config/: default_rules.yaml
config/profiles/: by-date.yaml  by-subject.yaml  by-type.yaml
doc/: 개발노트_탐색기기능개선_20260403.md
docs/: classification_rules.md  extract_keywords.py  generate_rules_md.py  keyword_graph.html  keyword_graph_data.json  개발노트_20260328.md
docs/notes/: changelog_20260329.md  devnote_20260331.md
ideation/: ideation_EML뷰어_20260403_1900.md
spec/: folder-organizer-project-spec.md
src/dsff/: __init__.py  __main__.py  cli.py  config.py
src/dsff/core/: __init__.py  analyzer.py  classifier.py  duplicates.py  folder_mgr.py  organizer.py  renamer.py  scanner.py  watcher.py
src/dsff/rules/: __init__.py  defaults.py  engine.py  loader.py
src/dsff/safety/: __init__.py  dryrun.py  history.py  undo.py
src/dsff/utils/: __init__.py  formatting.py  hashing.py  platform.py
src/reference/: 00_임원_관리자.md  01_기발자.md  02_인프라_운영.md  02_인프라운영.md  03_영업_제안.md  03_영업제안.md  04_구매_계약.md  04_구매계약.md  05_HR.md
tests/: conftest.py  test_classifier.py  test_duplicates.py  test_organizer.py  test_rules.py  test_scanner.py  test_watcher.py
webapp/: index.html  package-lock.json  package.json
webapp/electron/: main.cjs  preload.cjs
webapp/src/: App.tsx  electron.d.ts  index.css  mockData.ts  types.ts
webapp/src/components/: AddressBar.tsx  CommandBar.tsx  ContextMenu.tsx  DateTooltip.tsx  DetailsPane.tsx  (+5 more)
(+6 files in other folders)
